{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "42fe2a39-db98-409e-8a2f-0deaa324083d",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "9e8e6522-83f7-4684-b008-ef0a63281e5d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "94ad1b83-6e46-42cc-8370-31c9c9d3dba5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "08b63e2c-1fc0-44d6-93a2-e0f220782835",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f9eb925-4747-4343-8d5f-9555c1cb9a6a",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}